# cmake-example-project

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  class.cpp
src/include/: class.hpp
src/test/: CMakeLists.txt  test-class.cpp
targets/: CMakeLists.txt  simple-program.cpp
